--- a/public/css/vainglory-icons-font.css
+++ b/public/css/vainglory-icons-font.css
@@ -2,14 +2,14 @@
 
 @font-face {
   font-family: "vainglory-icons-font";
-  src:url("../fonts/vainglory-icons-font.eot");
-  src:url("../fonts/vainglory-icons-font.eot?#iefix") format("embedded-opentype"),
+  src: url("../fonts/vainglory-icons-font.eot");
+  src: url("../fonts/vainglory-icons-font.eot?#iefix")
+      format("embedded-opentype"),
     url("../fonts/vainglory-icons-font.woff") format("woff"),
     url("../fonts/vainglory-icons-font.ttf") format("truetype"),
     url("../fonts/vainglory-icons-font.svg#vainglory-icons-font") format("svg");
   font-weight: normal;
   font-style: normal;
-
 }
 
 [data-icon]:before {
@@ -220,4 +220,112 @@
 }
 .vg-abilities-shield:before {
   content: "\38";
+}
+.vg-academy:before {
+  content: "\39";
+}
+.vg-armory:before {
+  content: "\21";
+}
+.vg-banner-1:before {
+  content: "\22";
+}
+.vg-banner-2:before {
+  content: "\23";
+}
+.vg-brand-logo:before {
+  content: "\24";
+}
+.vg-gg:before {
+  content: "\25";
+}
+.vg-brand-mark:before {
+  content: "\26";
+}
+.vg-calendar-check:before {
+  content: "\27";
+}
+.vg-guild-officer:before {
+  content: "\28";
+}
+.vg-hand:before {
+  content: "\29";
+}
+.vg-kills:before {
+  content: "\2a";
+}
+.vg-leaderboard:before {
+  content: "\2b";
+}
+.vg-lightbulb:before {
+  content: "\2c";
+}
+.vg-profile:before {
+  content: "\2d";
+}
+.vg-pickaxe-minion:before {
+  content: "\2e";
+}
+.vg-pickaxe-coin:before {
+  content: "\2f";
+}
+.vg-pickaxe:before {
+  content: "\3a";
+}
+.vg-ok:before {
+  content: "\3b";
+}
+.vg-news:before {
+  content: "\3c";
+}
+.vg-quill:before {
+  content: "\3d";
+}
+.vg-swords-alt:before {
+  content: "\3e";
+}
+.vg-scroll:before {
+  content: "\3f";
+}
+.vg-target-scope:before {
+  content: "\40";
+}
+.vg-warning:before {
+  content: "\5b";
+}
+.vg-team-1:before {
+  content: "\5d";
+}
+.vg-scroll-attention:before {
+  content: "\5e";
+}
+.vg-season-dial:before {
+  content: "\5f";
+}
+.vg-team-2:before {
+  content: "\60";
+}
+.vg-shop-1:before {
+  content: "\7b";
+}
+.vg-shop-2:before {
+  content: "\7c";
+}
+.vg-stopwatch:before {
+  content: "\7d";
+}
+.vg-timer:before {
+  content: "\7e";
+}
+.vg-trophy:before {
+  content: "\5c";
+}
+.vg-sword:before {
+  content: "\e000";
+}
+.vg-recall:before {
+  content: "\e001";
+}
+.vg-swords:before {
+  content: "\e002";
 }
